config-root/namespaces/jx-production/node-demo-app/node-demo-app-node-demo-app-deploy.yaml
# Source: node-demo-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo-app-node-demo-app
  labels:
    draft: draft-app
    chart: "node-demo-app-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: node-demo-app-node-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-demo-app-node-demo-app
    spec:
      serviceAccountName: node-demo-app-node-demo-app
      containers:
        - name: node-demo-app
          image: "gcr.io/twy-website-analytics/node-demo-app:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
